--- a/New-Minty/cinnamon/scss/main/applets/_app-menu.scss
+++ b/New-Minty/cinnamon/scss/main/applets/_app-menu.scss
@@ -6,7 +6,7 @@
 }
 
 .menu-favorites-box {
-    border-image: url("img/containers/dark-bg.svg") 3;
+    border-image: url("img/containers/dark-bg.svg") 9;
     padding: 0.5em;
 }
 
